[gd_scene load_steps=3 format=3 uid="uid://cnwx7xtxrwbjf"]

[ext_resource type="Script" uid="uid://ub2uc6moyswm" path="res://Scripts/UI Scripts/lobby.gd" id="1_2kiua"]
[ext_resource type="PackedScene" uid="uid://d323ws0fmhjv4" path="res://Scenes/sandbox.tscn" id="2_4q051"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 3.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2kiua")
next_scene_packed = ExtResource("2_4q051")

[node name="Lobby Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -103.5
offset_top = 25.0
offset_right = 103.5
offset_bottom = 113.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 64
text = "LOBBY"

[node name="Context" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -39.0
offset_top = 153.0
offset_right = 37.0
offset_bottom = 119.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "2 v 2"

[node name="SpectatorList" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.123
anchor_top = 0.886
anchor_right = 0.123
anchor_bottom = 0.886
offset_left = 0.931
offset_top = -22.342
offset_right = 1459.93
offset_bottom = 22.658
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "2 v 2"

[node name="Spectators" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.063
anchor_top = 0.886
anchor_right = 0.063
anchor_bottom = 0.886
offset_left = -87.389
offset_top = 16.658
offset_right = 85.611
offset_bottom = -17.342
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Spectators:"

[node name="HostMessage" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.529
anchor_right = 0.501
anchor_bottom = 0.529
offset_left = -232.0
offset_top = 217.587
offset_right = 234.097
offset_bottom = 183.587
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Waiting on host to start match"

[node name="JoinRed" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.758
anchor_bottom = 0.758
offset_left = 256.0
offset_top = 4.27399
offset_right = 406.0
offset_bottom = -3.72601
grow_vertical = 2
theme_override_font_sizes/font_size = 28
text = "Join Team"

[node name="JoinBlue" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.764
anchor_right = 1.0
anchor_bottom = 0.764
offset_left = -391.0
offset_top = 4.29193
offset_right = -241.0
offset_bottom = -3.70807
grow_vertical = 2
theme_override_font_sizes/font_size = 28
text = "Join Team"

[node name="StartMatch" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.5
offset_top = 278.5
offset_right = 85.5
offset_bottom = 325.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 28
text = "Start Match"

[node name="Exit" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -206.0
offset_top = -73.0
offset_right = -40.0
offset_bottom = -26.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 28
text = "Exit Game
"

[node name="RedTeam" type="Control" parent="."]
layout_mode = 1
anchor_top = 0.177
anchor_bottom = 0.177
offset_left = 117.0
offset_top = -0.468994
offset_right = 525.0
offset_bottom = 534.531

[node name="RedTeamLabel" type="Label" parent="RedTeam"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -204.0
offset_top = 18.0
offset_right = 210.0
offset_bottom = -472.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "RED TEAM"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="RedTeam"]
layout_mode = 0
offset_left = 38.0
offset_top = 78.0
offset_right = 394.0
offset_bottom = 554.0

[node name="BlueTeam" type="Control" parent="."]
layout_mode = 1
anchor_left = 1.0
anchor_top = 0.158
anchor_right = 1.0
anchor_bottom = 0.158
offset_left = -532.0
offset_top = 0.473999
offset_right = -119.0
offset_bottom = 549.474
grow_horizontal = 0

[node name="BlueTeamLabel" type="Label" parent="BlueTeam"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -187.5
offset_top = 18.0
offset_right = 193.5
offset_bottom = -486.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "BLUE TEAM"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="BlueTeam"]
layout_mode = 0
offset_left = 24.0
offset_top = 87.0
offset_right = 380.0
offset_bottom = 563.0

[connection signal="pressed" from="JoinRed" to="." method="_on_join_red_pressed"]
[connection signal="pressed" from="JoinBlue" to="." method="_on_join_blue_pressed"]
[connection signal="pressed" from="StartMatch" to="." method="_on_start_match_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
